tests/js_error/source_locations/class/static_initializer/call.js
// Source location for where static initializer was called is start of class
class C {
  static {
    throw new Error();
  }
}